[project]
name = "expt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-bigquery[bqstorage,pandas]>=3.42.0",
    "google-genai>=2.8.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.43.0",
    "optuna>=4.8.0",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.58.0",
    "tabulate>=0.10.0",
]
